fix: contrast ratio on dark mode breadcrumb

--- a/components/Common/Breadcrumbs/BreadcrumbLink/index.module.css
+++ b/components/Common/Breadcrumbs/BreadcrumbLink/index.module.css
@@ -5,7 +5,8 @@
       px-2
       py-1
       font-semibold
-      text-white;
+      text-white
+      dark:text-white;
 
     &:hover {
       @apply bg-green-700
